--- a/index.html
+++ b/index.html
@@ -17,8 +17,12 @@
   <script src="https://d3js.org/d3.v4.min.js"></script>
   <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-legend/2.25.0/d3-legend.min.js"></script>
+  <script type="text/javascript" src="lib/geojson.js"></script>
+  <script type="text/javascript" src="lib/geojson.min.js"></script>
+
 </head>
 <body>
   <!-- TO DO: add your main.js file via a script tag -->
+  <script src="main.js"></script>
 </body>
 </html>
