--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 <body>
   <!-- TO DO: add your main.js file via a script tag -->
   <script src="main.js"></script>
-  <p> Toggle Category </p>
-  <input type="button" id="myBtn" value="clickme" onclick="update();" />
+  <p> Toggle category:<input type="button" id="myBtn" value="clickme" onclick="update();" /> </p>
+  <!-- <input type="button" id="myBtn" value="clickme" onclick="update();" /> -->
 
 </body>
 </html>
